# fastled-wasm-compiler

./: .aiderignore  .cursorignore  .cursorrules  .dockerignore  .gitignore  =0.28.1  AUDIT_REPORT.md  BUG.md  BUG_INVESTIGATION_BUILD_TOML.md  BUILD_FIXES_SUMMARY.md  CLAUDE.md  CMAKE_REMOVAL_COMPLETE.md  DESIGN_DUMP_HEADERS.md  DESIGN_SKETCH_DIRECTORY_MIGRATION.md  Dockerfile  FINAL_SUMMARY.md  GEMINI.md  IMPLEMENTATION_PROGRESS.md  INVESTIGATE.md  ITERATION_10_COMPLETE.md  ITERATION_12_COMPLETE.md  ITERATION_13_COMPLETE.md  ITERATION_9_COMPLETE.md  MANIFEST.in  MIGRATION_GUIDE.md  NATIVE_BUILD_SUCCESS.md  NATIVE_COMPILER_MIGRATION_GUIDE.md  PLAN_REMOVE_CMAKE.md  PLAN_REMOVE_CMAKE_COMPREHENSIVE.md  PROJECT_COMPLETE.md  PROOF_CMAKE_DEPENDENCY.md  QUICK_REFERENCE.md  QWEN.md  README.md  RESOLVED_PCH_BUG.md  SESSION_SUMMARY.md  TASK_ASYNC.md  TASK_REMOVE_THIN_ARCHIVES.md  docker-compose.yml  emit_llvm_investigation.md  (+16 more)
.claude/: settings.local.json
.claude/hooks/: run-integration-tests.py
.github/workflows/: build_multi_docker_image.yml  lint.yml  publish-emscripten.yml  publish_release.yml.disabled  template_build_docker_image.yml  test_build_exe.yml.disabled  test_macos.yml  test_ubuntu.yml  test_ubuntu.yml.disabled  test_win.yml  test_win.yml.disabled
assets/: platformio.ini  wasm_compiler_flags.py
build_tools/: CMakeLists.txt  build_lib.sh  ccache-emcc.sh  ccache-emcxx.sh  cmake_flags.cmake  download_fastled.sh  emar-thin.sh  generate_cmake_flags.py
build_tools_new/: compile_sketch.sh
cmake/: shared_build_settings.cmake
examples/: native_api_example.py
macos-x86_64/: emsdk-macos-x86_64-reconstruct.sh
src/fastled_wasm_compiler/: __init__.py  api.py  args.py  build_flags.toml  build_flags_adapter.py  build_lib_lazy.py  cleanup.py  cli.py  cli_build_lib_lazy.py  cli_native.py  cli_prewarm.py  cli_printenv.py  cli_symbol_resolution.py  cli_update_from_master.py  code_sync.py  compilation_flags.py  compilation_flags.toml  compile.py  compile_all_libs.py  compile_lib.py  compile_sketch.py  compile_sketch_native.py  compiler.py  copy_files_and_output_manifest.py  copy_headers.py  docker_discovery.py  dump_headers.py  dwarf_path_to_file_path.py  emsdk_manager.py  env_validation.py  fastled_downloader.py  fingerprint_cache.py  hashfile.py  insert_header.py  line_ending_pool.py  list_headers.py  native_compile_lib.py  native_compiler.py  open_process.py  paths.py  (+15 more)
tests/: test_cli.py  test_compile.py  test_run.py  test_source_resolver.py  test_versions_match.py
tests/compiler_root/: readme
tests/integration/: test_emsdk_manager_integration.py  test_full_build.py  test_native_compilation_integration.py
tests/integration/functors/: __init__.py  base.py  compilation.py  output.py  pch.py
tests/integration/sketch/: sketch.ino
tests/integration/sketch/lib/: file.cpp
tests/integration/test_data/assets/: wasm_compiler_flags.py
tests/integration/test_data/compiler_root/: platformio.ini  wasm_compiler_flags.py
tests/integration/test_data/compiler_root/fastled/: readme
tests/integration/test_data/compiler_root/fastled/src/: FastLED.h  necessary_symbols_from_fastled.cpp
tests/integration/test_data/compiler_root/src/: config.cpp  helper.cpp
tests/integration/test_data/fastled_compiler_dir/src/: necessary_symbols.cpp
tests/integration/test_data/mapped/sketch/: sketch.ino
tests/mapped/: readme
tests/test_data/compiler_root/src/: sketch.ino.cpp
tests/test_data/fastled_compiler_dir/: readme
tests/test_data/mapped/sketch/fastled_js/: files.json
tests/test_data/mapped/sketch/fastled_js/modules/: readme
tests/unit/: test_archive_validation.py  test_args_to_str.py  test_cli_native.py  test_cli_update_npm_restore.py  test_compile.py  test_compiler_asset_sync.py  test_dump_headers.py  test_emsdk_manager.py  test_exclusive_archive_modes.py  test_filter_list.py  test_library_backup.py  test_line_ending_pool.py  test_native_compilation.py  test_run.py  test_sketch_hasher.py  test_source_resolver.py  test_stale_cache.py  test_sync.py  test_sync_mtime_simple.py  test_versions_match.py  test_vite_build.py
tests/unit/integration/: test_full_build.py
tests/unit/test_data/mapped/sketch/: sketch.ino
tests/unit/test_data/mapped/sketch/lib/: file.h
tests/unit/test_data/sketch_cache/: curr.h  old.h  sketch.ino
tools/: __init__.py  copy_files_and_output_manifest.py  generate_index.py  utils.py
ubuntu/: emsdk-ubuntu-latest-manifest.txt
windows/: emsdk-windows-latest-manifest.txt
