[build-system]
requires = ["setuptools>=65.5.1", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastled_wasm_compiler"
readme = "README.md"
description = "Fastled Wasm Compiler"
requires-python = ">=3.10"
keywords = ["template-python-cmd"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "platformio==6.1.18",
    "fasteners==0.19",
    "httpx>=0.28.1",
]

# ALSO CHANGE THE VERSION IN THE DOCKER TO MATCH!
# Step one, bump this version up.
# Submit
# Then bump up the version in dockerfile and submit.
version = "1.0.95"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[project.scripts]
fastled-wasm-compiler = "fastled_wasm_compiler.cli:main"
fastled-wasm-compiler-prewarm = "fastled_wasm_compiler.cli_prewarm:main"
fastled-wasm-compiler-native = "fastled_wasm_compiler.cli_native:main"
