[build-system]
requires = ["setuptools>=65.5.1", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastled_wasm_compiler"
readme = "README.md"
description = "Fastled Wasm Compiler"
requires-python = ">=3.10"
keywords = ["template-python-cmd"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "platformio==6.1.18",
    "fasteners==0.19",
    "httpx>=0.28.1",
    "tomli>=2.2.1",
]

version = "1.0.109"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.pyright]
reportUntypedFunctionDecorator = "error"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownLambdaType = "none"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedNamedTuple = "error"
reportPrivateUsage = "none"
reportConstantRedefinition = "none"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportOverlappingOverload = "error"
reportMissingParameterType = "error"
reportMissingReturnType = "error"
reportDeprecated = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportImplicitStringConcatenation = "error"
# Force usage of modern type union syntax (T | U instead of Union[T, U])
pythonVersion = "3.10"
# Enforce PEP 604 union syntax and PEP 585 generic types
strictParameterNoneValue = true
strictDictionaryInference = true
strictListInference = true
strictSetInference = true


[project.scripts]
fastled-wasm-compiler = "fastled_wasm_compiler.cli:main"
fastled-wasm-compiler-prewarm = "fastled_wasm_compiler.cli_prewarm:main"
fastled-wasm-compiler-native = "fastled_wasm_compiler.cli_native:main"
fastled-wasm-compiler-printenv = "fastled_wasm_compiler.cli_printenv:main"
fastled-wasm-compiler-symbol-resolution = "fastled_wasm_compiler.cli_symbol_resolution:main"
fastled-wasm-compiler-build-lib-lazy = "fastled_wasm_compiler.cli_build_lib_lazy:main"
